- Added improved demo with creation / editing of events using jquery ui.
- Added option to only display hours defined in the 'businessHours' config option.
- Migrated code base to extend jquery-ui widget.
- Improved inline method documentation.
- Added 'readonly' config option to flag the entire calendar as readonly, preventing creation, dragging, dropping and resizing of events.


2009-06-08 - 1.1.3
- Removed console.log that was causing issues in IE.
- Fixed an issue with nav buttons in certain environments


2009-05-21 - 1.1.2
- Fixed problem in safari and chrome where new events where not being created due to lack of event bubbling of mousedown and mouseup events.

2009-05-17- 1.1.1
- Fixed problem with calculation of end date passed to data functions / url
- Updating scrolling to hour to only occur on first render
- Added code to check for changed options after loading data before actually re-rendering the calendar.


2009-05-16 - 1.1
- Extended the events data structure to allow options to be passed back to the calendar with event data. This has 
	resulted in a config option name change. The events option is now called 'data'. The data option can be either an array 
	of calendar events or an object containing a property called 'events' which is the events data array. The data option 
	can also contain an additional property called 'options'. Any options passed with the data will replace the current options 
	in the calendar and force a re-render of the calendar. This is very useful in cases where the calendar layout needs to change for 
	different data sets. For example, a calendar that is delegated but each owner has their own preference for timeslots per hour.
- Fixed problem where errors were raised due to missing mouseover / mouseout events on calEvents.

2009-05-12 - 1.0
- Added support for preventing overlapping calendar events
- Internal refactoring and cleanup including moving standard events to use delegation

2009-05-10 - 1.0-alpha-4