@@ -3,7 +3,7 @@
 <head>
 
 	<link rel='stylesheet' type='text/css' href='reset.css' />
-	<link rel='stylesheet' type='text/css' href='http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/smoothness/jquery-ui.css' />
+	<link rel='stylesheet' type='text/css' href='http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/start/jquery-ui.css' />
 	<link rel='stylesheet' type='text/css' href='../jquery.weekcalendar.css' />
 	<link rel='stylesheet' type='text/css' href='demo.css' />
 	
